[package]
name = "xyio"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "LGPL-3.0+"

description = "Proactor I/O"

[dependencies]
clap = "2"

log = "*"
bitflags = "*"
chrono = "*"
libc = "*"
nix = "*"
rmp = "*"
time = "*"

httparse = "*"
http-muncher = {git = "https://github.com/3Hren/rust-streaming-http-parser"}

[profile.release]
debug = true
panic = 'abort'
